# calendar-ui-widgets

./: Makefile.am  calendar-ui-widgets.pc.in  configure.ac
debian/: changelog  control  rules
src/: Makefile.am  PipCalendarColor.h  PipCalendarDialog.h  PipColorPicker.h  calendar-ui-widgets.h  calendar-widgets-enum-gen.c.in  calendar-widgets-enum-gen.h.in  helper-widgets.h  pip-calendar-color.c  pip-calendar-dialog.c  pip-color-picker.c  test-color-picker.c
